# backend/src/swagger_output.json
@@ -594,10 +594,10 @@
                 "itemName": {
                   "example": "any"
                 },
-                "category": {
+                "userName": {
                   "example": "any"
                 },
-                "userId": {
+                "category": {
                   "example": "any"
                 }
               }
@@ -610,6 +610,19 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/farmer-request/farmer-request": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "500": {
             "description": "Internal Server Error"
